# UMKM-COPILOT

./: .gitignore  app.py  db_firestore.py  devpost_about.md  devpost_remaining.md  devpost_short.md  requirements.txt  vision.py
api/: index.py
lang/lib/python3.12/: _sysconfigdata__linux_x86_64-linux-gnu.py
lang/lib/python3.12/config-3.12-x86_64-linux-gnu/: python-config.py
runtime/: THIRD-PARTY-LICENSES.txt  runtime-release
static/css/: style.css
task/: BLUEPRINT.md  DEMO_VIDEO_SCRIPT.md  README.md  WEBHOOK_SETUP.md  YOUTUBE_DESCRIPTION.md  app.py  db_firestore.py  devpost_ai_impact.md  devpost_ai_operations.md  devpost_ai_production.md  devpost_ai_tools.md  devpost_built_with.md  devpost_business_model.md  devpost_full_form.md  devpost_gemini_api.md  devpost_google_cloud.md  devpost_sustainability.md  devpost_sustainability_detailed.md  fix_push.py  insert_push.py  push_github.py  push_template.html  pyproject.toml  translations.py  vc__handler__python.py  vercel.json
task/_vendor/charset_normalizer-3.4.7.dist-info/: RECORD
task/_vendor/greenlet-3.5.2.dist-info/: RECORD
task/_vendor/grpcio-1.81.1.dist-info/: RECORD
task/_vendor/gunicorn-21.2.0.dist-info/: RECORD
templates/: analytics.html  base.html  conversations.html  dashboard.html  demo.html  login.html  product_form.html  products.html  settings.html
