[project]
name = "app"
version = "0.1.0"
dependencies = [ "flask==3.0.0", "flask-sqlalchemy==3.1.1", "google-generativeai==0.3.2", "google-cloud-firestore==2.16.0", "google-auth==2.28.0", "pillow==10.2.0", "requests==2.31.0", "python-dotenv==1.0.0", "gunicorn==21.2.0" ]
requires-python = "~=3.12.0"
